Changed traefik configuration from config file to configmap, moved webinterface port to 8081 to avoid collision with Kebernetes api-server if traefik is installed on master

--- a/playbooks/roles/traefik/tasks/main.yml
+++ b/playbooks/roles/traefik/tasks/main.yml
@@ -6,11 +6,18 @@
     state: directory
     mode: 0755
 
-- name: copy traefik configuration
+- name: copy traefik config file
   become: yes
   copy:
     src: traefik.toml
     dest: "/etc/traefik"
+
+- name: create configmap from traefik config file
+  command: >
+    kubectl create configmap
+    traefik-conf
+    --namespace=kube-system
+    --from-file=/etc/traefik/traefik.toml
 
 - name: copy traefik DaemonSet configuration
   become: yes
@@ -22,4 +29,3 @@
   command: >
     kubectl apply -f
     /etc/traefik/traefik-daemonset.yml
-  when: inventory_hostname in groups['master']
