--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,11 @@ before_script:
       env | j2 --format=env test/secrets-kubenow/tfvars/"$HOST_CLOUD".tfvars.j2 >
       ./terraform.tfvars
 
+  # Render Cloudflare configuration
+  - >
+      env | j2 --format=env test/secrets-kubenow/cloudflare/conf.yml.j2 >
+      playbooks/roles/cloudflare/vars/conf.yml
+
 script:
   # AWS doesn't need image import
   - >
