--- a/.travis.yml
+++ b/.travis.yml
@@ -90,7 +90,7 @@ script:
   # AWS doesn't need image import
   - >
       if [ $HOST_CLOUD = 'openstack' ] || [ $HOST_CLOUD = 'gce' ]; then
-        ansible-playbook -e "credentials_file_path=$PWD/test/secrets-kubenow/host_cloud/gce-key.json"
+        ansible-playbook -e "credentials_file_path=$PWD/test/secrets-kubenow/host_cloud/gce-key.json" \
         playbooks/import-"$HOST_CLOUD"-image.yml
       fi
   - terraform get $HOST_CLOUD
