--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ before_script:
       playbooks/roles/cloudflare/vars/conf.yml
 
 script:
+  - set -e # exit on first error
   # AWS doesn't need image import
   - >
       if [ $HOST_CLOUD = 'openstack' ] || [ $HOST_CLOUD = 'gce' ]; then
@@ -99,6 +100,7 @@ script:
   - terraform apply $HOST_CLOUD
   - ansible-playbook playbooks/install-core.yml
   - ansible-playbook playbooks/infra-test.yml
+  - set +e # run after_script even if error
 
 after_script:
   - terraform destroy -force $HOST_CLOUD
