--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,10 @@ install:
       j2cli
       shade
       apache-libcloud
+      urllib3
+      pyopenssl
+      ndg-httpsclient
+      pyasn1
 
 before_script:
 
