--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,13 @@ install:
       shade
       apache-libcloud
 
+  # Install certificates
+  # httpd.pharmb.io
+  - >
+      echo -n | openssl s_client -connect httpd.pharmb.io:443 |
+      sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' |
+      sudo tee -a /etc/ssl/certs/ca-certificates.crt
+
 before_script:
 
   # Source test environment
