--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ install:
 
   # This fixes get_url SSL verification
   - >
-      ansible all -i localhost, -c local -m setup -a 'filter=ansible_python' \
+      ansible all -i localhost, -c local -m setup -a 'filter=ansible_python'
       -e ansible_python_interpreter=$PYBIN
 
 before_script:
