--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ branches:
 
 env:
   global:
+    - PYBIN=/home/travis/virtualenv/python2.7.12/bin/python2.7
     - TERRAFORM_VERSION=0.7.8
     - ANSIBLE_VERSION=2.2.0.0
     - IMAGE_VERSION=v020
@@ -24,12 +25,6 @@ env:
     - HOST_CLOUD=openstack
     - HOST_CLOUD=gce
     - HOST_CLOUD=aws
-
-# This fixes get_url SSL verification
-matrix:
-  include:
-    - python: 2.7
-      env: PYBIN=/home/travis/virtualenv/python2.7.12/bin/python2.7
 
 git:
   submodules: false
@@ -101,7 +96,7 @@ script:
   - >
       if [ $HOST_CLOUD = 'openstack' ] || [ $HOST_CLOUD = 'gce' ]; then
         ansible-playbook \
-        -i localhost \ # This fixes get_url SSL verification
+        -i localhost \
         -e "credentials_file_path=$PWD/test/secrets-kubenow/host_cloud/gce-key.json" \
         playbooks/import-"$HOST_CLOUD"-image.yml
       fi
