Revert "try to remove setup block"
This reverts commit 2a6b98c6faba52a57c72e7cef5071c1d97115766.

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,11 @@ install:
       shade
       apache-libcloud
 
+  # This fixes get_url SSL verification
+  - >
+      ansible all -i localhost, -c local -m setup -a 'filter=ansible_python'
+      -e ansible_python_interpreter=$PYBIN
+
 before_script:
 
   # Source test environment
