install import requirements in Ansible

--- a/playbooks/import-gce-image.yml
+++ b/playbooks/import-gce-image.yml
@@ -1,4 +1,3 @@
-# requires apache-libcloud (python)
 - hosts: localhost
   gather_facts: False
   vars:
@@ -6,6 +5,9 @@
     credentials_file: "{{ lookup('file', credentials_file_path) }}"
     img_version: "v020"
   tasks:
+  - name: "ensure apache-libcloud is installed"
+    pip:
+      name: apache-libcloud
   - name: "set image facts"
     set_fact:
       img_name: "kubenow-{{img_version}}"
