--- a/playbooks/import-openstack-image.yml
+++ b/playbooks/import-openstack-image.yml
@@ -38,7 +38,14 @@
         state: present
         timeout: "{{timeout}}"
       async: "{{timeout}}"
-      poll: 10
+      poll: 0
+      register: kubenow_upload
+    - name: "wait for image upload to be done"
+      async_status: jid={{ kubenow_upload.ansible_job_id }}
+      register: upload_status
+      until: upload_status.finished
+      retries: "{{((timeout | int) / 60) | int}}"
+      delay: 60
   handlers:
     - name: delete local image
       file:
