use curl instead of get_url

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ branches:
 
 env:
   global:
-    - PYBIN=/home/travis/virtualenv/python2.7.12/bin/python2.7
     - TERRAFORM_VERSION=0.7.8
     - ANSIBLE_VERSION=2.2.0.0
     - IMAGE_VERSION=v020
@@ -67,12 +66,7 @@ install:
       ansible==${ANSIBLE_VERSION}
       j2cli
       dnspython
-
-  # This needs to be installed with PYBIN env
-  - >
-      ansible localhost
-      -e ansible_python_interpreter=$PYBIN
-      -m pip -a 'name=jmespath'
+      jmespath
 
 before_script:
 
@@ -95,8 +89,6 @@ script:
   - >
       if [ $HOST_CLOUD = 'openstack' ] || [ $HOST_CLOUD = 'gce' ]; then
         ansible-playbook \
-        -i localhost \
-        -e ansible_python_interpreter=$PYBIN \
         -e "credentials_file_path=$PWD/test/secrets-kubenow/host_cloud/gce-key.json" \
         playbooks/import-"$HOST_CLOUD"-image.yml
       fi
