--- a/playbooks/import-openstack-image.yml
+++ b/playbooks/import-openstack-image.yml
@@ -7,17 +7,13 @@
     - name: "ensure shade is installed"
       pip:
         name: shade
-    - name: "ensure urllib3 is updated"
-      pip:
-        name: urllib3
-        version: 1.21
     - name: "set image facts"
       set_fact:
         image_name: "kubenow-{{img_version}}"
     - name: "download KubeNow image"
-      get_url:
-        url: "https://httpd.pharmb.io/kubenow-img/{{ image_name }}.qcow2"
-        dest: /tmp/{{ image_name }}.qcow2
+      command: >
+        curl https://httpd.pharmb.io/kubenow-img/{{ image_name }}.qcow2
+        /tmp/{{ image_name }}.qcow2
       notify:
         - delete local image
       async: "{{timeout}}"
