--- a/playbooks/import-openstack-image.yml
+++ b/playbooks/import-openstack-image.yml
@@ -20,14 +20,14 @@
       async: "{{timeout}}"
       poll: 0
       register: kubenow_download
-      when: openstack_image == null
+      when: openstack_image is undefined
     - name: "wait for image download to be done"
       async_status: jid={{ kubenow_download.ansible_job_id }}
       register: download_status
       until: download_status.finished
       retries: "{{((timeout | int) / 60) | int}}"
       delay: 60
-      when: openstack_image == null
+      when: openstack_image is undefined
     - name: "upload image to OpenStack"
       os_image:
         name: "{{ image_name }}"
@@ -39,14 +39,14 @@
       async: "{{timeout}}"
       poll: 0
       register: kubenow_upload
-      when: openstack_image == null
+      when: openstack_image is undefined
     - name: "wait for image upload to be done"
       async_status: jid={{ kubenow_upload.ansible_job_id }}
       register: upload_status
       until: upload_status.finished
       retries: "{{((timeout | int) / 60) | int}}"
       delay: 60
-      when: openstack_image == null
+      when: openstack_image is undefined
   handlers:
     - name: delete local image
       file:
