use amazon link

--- a/playbooks/import-openstack-image.yml
+++ b/playbooks/import-openstack-image.yml
@@ -13,7 +13,7 @@
         image: "{{ image_name }}"
     - name: "download KubeNow image"
       command: >
-        curl https://httpd.pharmb.io/kubenow-img/{{ image_name }}.qcow2
+        curl https://s3.amazonaws.com/kubenow-us-east-1/{{ image_name }}.qcow2
         > /tmp/{{ image_name }}.qcow2
       notify:
         - delete local image
