--- a/playbooks/roles/common-test/tasks/main.yml
+++ b/playbooks/roles/common-test/tasks/main.yml
@@ -14,8 +14,8 @@
 
 - name: "get roles from stdout"
   set_fact:
-    edge_roles: get_edge_roles.stdout
-    
+    edge_roles: "{{ get_edge_roles.stdout }}"
+
 - name: "test edge labels"
   fail:
     msg: "unexpected edge lables: {{edge_roles}}"
