--- a/playbooks/roles/common-test/tasks/main.yml
+++ b/playbooks/roles/common-test/tasks/main.yml
@@ -2,19 +2,25 @@
   command: >
     kubectl get nodes {{ groups['edge'] | join(' ') }}
     -o jsonpath='{@..metadata.labels.role}'
-  register: get_edge_roles
+  register: edge_roles_group
+  when: edge_names is undefined
+
+- name: "set edge_roles from inventory group"
+  set_fact:
+    edge_roles: "{{ edge_roles_group.stdout }}"
   when: edge_names is undefined
 
 - name: "get edge labels from inventory variable"
   command: >
     kubectl get nodes {{ edge_names }}
     -o jsonpath='{@..metadata.labels.role}'
-  register: get_edge_roles
+  register: edge_roles_var
   when: edge_names is defined
 
-- name: "get roles from stdout"
+- name: "set edge_roles from inventory variable"
   set_fact:
-    edge_roles: "{{ get_edge_roles.stdout }}"
+    edge_roles: "{{ edge_roles_var.stdout }}"
+  when: edge_names is defined
 
 - name: "test edge labels"
   fail:
