--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ before_script:
         cp terraform.tfvars.${HOST_CLOUD}-template terraform.tfvars
       fi
   - mkdir -p ~/.ssh/ && cp test/secret/kubenow-ci.pub ~/.ssh/id_rsa.pub
-  - sed -i -e "s/your-cluster-prefix/$kubenow-ci-${TRAVIS_BUILD_NUMBER}/g" terraform.tfvars
+  - sed -i -e "s/your-cluster-prefix/kubenow-ci-${TRAVIS_BUILD_NUMBER}/g" terraform.tfvars
   - sed -i -e "s/your-kubeadm-token/${CI_KUBETOKEN}/g" terraform.tfvars
   # AWS
   - sed -i -e "s/your-acces-key-id/${AWS_ACCESS_KEY_ID}/g" terraform.tfvars
