--- a/playbooks/roles/traefik/files/traefik-daemonset.yml
+++ b/playbooks/roles/traefik/files/traefik-daemonset.yml
@@ -16,7 +16,7 @@ spec:
       hostNetwork: true # workaround
       terminationGracePeriodSeconds: 60
       containers:
-      - image: containous/traefik:v1.0.3
+      - image: traefik:v1.2.1
         name: traefik-ingress-lb
         imagePullPolicy: Always
         volumeMounts:
