--- a/playbooks/roles/weave-network/tasks/main.yml
+++ b/playbooks/roles/weave-network/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: install weave
-  command: kubectl apply -f https://git.io/weave-kube
+  command: kubectl apply -f https://git.io/weave-kube-1.6
