updated cloudflare test to use {domain} variable that is set in inventory instead of previous cf_ variables used in cloudflare ansible playbook

--- a/playbooks/roles/cloudflare-test/tasks/main.yml
+++ b/playbooks/roles/cloudflare-test/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - name: DNS query
   set_fact:
-    query_result: "{{lookup('dig', 'test.{{cf_subdomain}}.{{cf_zone}}', wantlist=True)}}"
+    query_result: "{{lookup('dig', 'test.{{domain}}', wantlist=True)}}"
 
 - name: fail if edge IP is not in query result
   fail:
