--- a/playbooks/roles/common/tasks/workaround-RBAC.yml
+++ b/playbooks/roles/common/tasks/workaround-RBAC.yml
@@ -5,6 +5,7 @@
 # to adapt to 1.6, and then after a time we can remove and apply all fixes
 # that will be done to support RBAC
 #
+# delete first is a workaround until kubernetes support apply clusterrolebinding
 - name: "delete clusterrolebinding permissive-binding RBAC-workaround (if it already exists)"
   shell: >
     kubectl delete
