--- a/playbooks/roles/weave-network/tasks/main.yml
+++ b/playbooks/roles/weave-network/tasks/main.yml
@@ -1,3 +1,18 @@
 ---
-- name: install weave
-  command: kubectl apply -f https://git.io/weave-kube-1.6
+- name: create weave yaml directory
+  become: yes
+  file:
+    path: /etc/weave/yaml/
+    state: directory
+    mode: 0755
+
+- name: copy weave DaemonSet file
+  become: yes
+  copy:
+    src: weave-daemonset-k8s-v1.9.5.yaml
+    dest: "/etc/weave/yaml/weave-daemonset-k8s.yaml"
+
+- name: start weave DaemonSet
+  command: >
+    kubectl apply -f
+    /etc/weave/yaml/weave-daemonset-k8s.yaml"
