--- a/playbooks/roles/heketi/tasks/main.yml
+++ b/playbooks/roles/heketi/tasks/main.yml
@@ -31,13 +31,13 @@
 - name: copy heketi configuration
   become: yes
   copy:
-    src: heketi-deployment.json
-    dest: "/etc/heketi/kubernetes/heketi-deployment.json"
+    src: heketi-deployment.yml
+    dest: "/etc/heketi/kubernetes/heketi-deployment.yml"
 
 - name: start heketi
   command: >
     kubectl apply -f
-    /etc/heketi/kubernetes/heketi-deployment.json
+    /etc/heketi/kubernetes/heketi-deployment.yml
 
 - name: wait for heketi to be Running
   command: >
