--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
     - TERRAFORM_VERSION=0.9.4
     - ANSIBLE_VERSION=2.2.0.0
     - IMAGE_VERSION=v020
+    - LIBCLOUD_VERSION=1.5.0
   matrix:
     - HOST_CLOUD=openstack
     - HOST_CLOUD=gce
@@ -56,7 +57,7 @@ install:
       dnspython
       jmespath
       backports.ssl_match_hostname
-      apache-libcloud
+      apache-libcloud="${LIBCLOUD_VERSION}"
       shade
 
 before_script:
