--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,13 @@ env:
 git:
   submodules: false
 
+addons:
+  apt:
+    sources:
+      - debian-sid
+    packages:
+      - shellcheck
+
 before_install:
 
   # Generate keypair
