--- a/playbooks/roles/shared-volume/tasks/main.yml
+++ b/playbooks/roles/shared-volume/tasks/main.yml
@@ -39,7 +39,8 @@
     awk '{s+=$1} END {print s}'
   register: get_tot_size
 
-- set_fact:
+- name: "set gluster_vol_size fact"
+  set_fact:
     gluster_vol_size: "{{((get_tot_size.stdout | int) / 9) | int}}G"
 
 - name: render shared-volume configuration
