try to fix matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,11 @@ jobs:
     - stage: test
 
       env:
-        - HOST_CLOUD=openstack
-        - HOST_CLOUD=gce
-        - HOST_CLOUD=aws
-
+        matrix:
+          - HOST_CLOUD=openstack
+          - HOST_CLOUD=gce
+          - HOST_CLOUD=aws
+          
       before_install:
 
         # Install code review tools
